--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,10 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="lib/d3/d3.js"></script>  
+    <script src="lib/nvd3/build/nv.d3.min.js"></script>  
+    <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>  
+    <link rel="stylesheet" href="lib/nvd3/build/nv.d3.css"> 
     <script src="js/app.js"></script>
   </head>
   <body ng-app="starter">
