--- a/www/index.html
+++ b/www/index.html
@@ -36,13 +36,14 @@
     <link rel="stylesheet" href="lib/nvd3/build/nv.d3.css"> 
     <script src="js/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="MainController as Main">
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">Ionic with d3 graphic examples</h1>
       </ion-header-bar>
       <ion-content>
+        <nvd3 options="Main.options" data="Main.data"></nvd3>
       </ion-content>
     </ion-pane>
   </body>
